fix: socials layout with nowrap

--- a/src/assets/scss/components/language-switcher.scss
+++ b/src/assets/scss/components/language-switcher.scss
@@ -13,8 +13,8 @@
 }
 
 .switcher--language .switcher__select {
-    min-width: 15rem;
-    flex: 1 0 15rem;
+    min-width: 14rem;
+    flex: 0 1 14rem;
 }
 
 .language-switcher {
